Revert "Fixed scrollbar always visible in firefox bug"
This reverts commit 6f1f55fdba25398ab19f033a813973f7f43f1c3c.

--- a/content/stylesheets/screen.sass
+++ b/content/stylesheets/screen.sass
@@ -20,7 +20,6 @@ body
   background-size:  cover
   text-shadow:      0px 1px 0px $shadow
   font-family:      'Open Sans', $verdana
-  overflow:         hidden
 
 a
   &:link, &:visited
